corrected spacing

--- a/style.css
+++ b/style.css
@@ -236,12 +236,14 @@ p {
   color: blue;
 }
 
+.item,
 ul,
 li {
   list-style-type: none;
-  font-size: 20px;
-  padding-top: 10px;
+  font-size: 15px;
+  padding-top: 20px;
   margin-left: 10px;
+  justify-content: center;
 }
 
 .main_description {
